# ff14_avatar

./: Cargo.toml  README.md
examples/: fetch_avatar.rs
src/: lib.rs
