[package]
name = "ff14_avatar"
version = "0.1.7"
authors = ["Yuta Hirata"]
description = "a tool to get avatar image from lodestone"
repository = "https://github.com/MorrisFreeman/ff14_avatar"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = "0.11"
scraper = "0.18"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
